--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.1.2",
     "@sendgrid/mail": "^7.7.0",
+    "@types/uuid": "^8.3.4",
     "apollo-server-express": "^3.8.2",
     "bcryptjs": "^2.4.3",
     "cache-manager": "^4.0.1",
@@ -45,7 +46,8 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "sqlite3": "^5.0.8",
-    "typeorm": "^0.3.6"
+    "typeorm": "^0.3.6",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
