--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,11 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
-    "paths": {}
+    "paths": {
+      "@app/common": ["libs/common/src"],
+      "@app/common/*": ["libs/common/src/*"],
+      "@api/src": ["app/api"],
+      "@api/src/*": ["app/api/*"]
+    }
   }
 }
